Fix minor layout issue with many parallel roles

--- a/verdocs-web-sdk/src/components/templates/verdocs-template-roles/verdocs-template-roles.scss
+++ b/verdocs-web-sdk/src/components/templates/verdocs-template-roles/verdocs-template-roles.scss
@@ -48,8 +48,9 @@ verdocs-template-roles {
 
       .row-roles {
         flex: 1;
+        gap: 10px;
         display: flex;
-        column-gap: 10px;
+        flex-wrap: wrap;
         flex-direction: row;
       }
 
